--- a/Calculadora.ipynb
+++ b/Calculadora.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGUvU/jxnWPESdkuuxttkJ",
+      "authorship_tag": "ABX9TyPfceeOZoxy55N3CPk4M+9a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,27 +55,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eNKpE2LFF38l",
-        "outputId": "62789a0b-f266-4ce0-eac9-94d2d140eabb"
+        "outputId": "f6aa7e72-ce83-46f0-8846-a035aead4532"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite um número: 2\n",
+            "Digite um número: 3\n",
             "Digite outro número: 5\n",
             "digite 1 para soma \n",
             "digite 2 para subtração \n",
             "digite 3 para multiplicação \n",
             "digite 4 para divisão \n",
-            "escolha um operador:3\n",
-            "10\n"
+            "escolha um operador: 3\n",
+            "15\n"
           ]
         }
       ],
@@ -91,13 +91,13 @@
         "  elif operador == 4:\n",
         "    resultado = num1 / num2\n",
         "  else:\n",
-        "    resultado = \"Escolha de operador valido\"\n",
+        "    resultado = 0\n",
         "\n",
         "  return resultado\n",
         "\n",
         "numero1 = int(input(\"Digite um número: \"))\n",
         "numero2 = int(input(\"Digite outro número: \"))\n",
-        "operador1 = int(input(\"digite 1 para soma \\ndigite 2 para subtração \\ndigite 3 para multiplicação \\ndigite 4 para divisão \\nescolha um operador:\"))\n",
+        "operador1 = int(input(\"digite 1 para soma \\ndigite 2 para subtração \\ndigite 3 para multiplicação \\ndigite 4 para divisão \\nescolha um operador: \"))\n",
         "\n",
         "print(calculadora(numero1, numero2, operador1))\n",
         "\n"
